# automating-aws

./: README.md
webotron/: index.html  ipythonsession.py  pyproject.toml  requirements.txt  setup.py
webotron/webotron/: __init__.py  bucket.py  cdn.py  certificate.py  domain.py  setup.py  util.py  webotron.py
