[tool.poetry]
name = "webotron"
version = "0.1.0"
description = ""
authors = ["Kiran Joshi <kiran.joshi@jisc.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.10.36"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
